--- a/our-experience-app/src/views/admin/create_job_modal.pug
+++ b/our-experience-app/src/views/admin/create_job_modal.pug
@@ -5,11 +5,12 @@ section(tabindex='-1')#new-post-form.modal.fade
   div.modal-dialog.modal-lg
     div.modal-content
       div.modal-header
-        h5#new-post-form-label.modal-title New Jop Post
+        h5#new-post-form-label.modal-title New Job Post
         button(type='button' data-bs-dismiss='modal' aria-lable='Close').btn-close
 
       div.modal-body
         form(action="/admin/job/create" method="POST")#job-form
+          input(type='hidden' name='_csrf' value=csrfToken)
           input(type='hidden' name='id' value='')#job_id
           div#mb-3
             label(for="title").form-label Job Title
